2000-12-06  Radek Doulik  <rodo@helixcode.com>

	* htmlinterval.c (select_object): use top engine for select_in and
	"right one" for select_range call

2000-12-06  Larry Ewing  <lewing@helixcode.com>

	* htmlengine.c (parse_object): change ret_val to object_found to
	make the meaning clear. Let me make this clear if you return TRUE
	in your object_requested signal we will use the embedded element,
	if you return false we will parse and use the contents between
	<object> and </object>.  Also free type and classid.

	* gtkhtml.c (html_engine_object_requested_cb): change ret_val to
	object_found to make the meaning clear.

2000-12-06  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c (calc_column_width_step): take care of cspan
	(calc_column_width_template): do steps for all possible cspans

	* htmlengine.c (parse_i): set eat_space to FALSE after <img>

	* htmltable.c (divide_into_percented): don't substract max_size
	[c] from MIN, but from total_width part
	(calc_lowest_fill): new helper function
	(divide_into_variable_all): use calc_lowest_fill, updated first
	step of dividing between cols with pref width < actual
	(calc_column_width_step): extracted from
	calc_column_width_template

	* htmlengine.c (parse_body): set eat_space to FALSE
	(insert_text): drop consequent spaces
	(parse_s): set eat_space to FALSE after </select>
	(parse_t): likewise after </textarea>

	* htmlengine.h: added Engine::eat_space flag

	* htmlgdkpainter.c (alloc_e_font): drop our heuristic and let
	EFont do the job
	(alloc_e_font): drop fixed font if face != NULL
	(alloc_e_font): use our heuristic for size
	(alloc_e_font_it): new helper function
	(alloc_e_font): try to alloc "obligue" when no italics found

	* htmltable.c (divide_into_variable_all): more tuning

	* htmlengine.c (parse_p): don't reset divAlign
	(parse_d): likewise
	(html_engine_parse): set divAlign to HTML_HALIGN_LEFT

	* htmltable.c: I have completely rewritten size calculating,